2009-11-25  Sanel <karijes@users.sourceforge.net>

	* examples/theme.cpp: s/Fl_Button.h/Fl_Button.H
	* examples/Jamfile: let theme.cpp use FLTK_CFLAGS
	* edelib/ForeignCallback.h: fixed example to match function changes

2009-11-24  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/theme.scm: fix a typo in comment; additionally clarify
	theme.style-get function
	* examples/theme.cpp:
	* examples/theme-sample: simple example of theming engine

2009-11-20  Sanel <karijes@users.sourceforge.net>

	* autogen.sh: emulate basic aclocal functionality so edelib does not
	require whole automake package for this
	* src/String.cpp:
	* src/IconChooser.cpp: allow it to compile on gcc >= 4.4.1 due
	introduction const safe C string function

2009-11-17  Sanel <karijes@users.sourceforge.net>

	* edelib/Missing.h:
	* src/Missing.cpp: edelib_daemon() added since Solaris family does not
	provides it at all
	* edelib/Missing.h: separate these functions to different documentation
	module
	* test/run.cpp: do not use 'tar' without path or GNU version will be
	selected on default OpenSolaris installation
	* edelib/Missing.h: s/Missing function/Missing functions

2009-11-16  Sanel <karijes@users.sourceforge.net>

	* test/file.cpp:
	* test/run.cpp:
	* test/desktopfile.cpp: some #ifdef code to run pass tests on OpenSolaris
	* test/file.cpp: removed commented code

2009-11-13  Sanel <karijes@users.sourceforge.net>

	* edelib/ForeignCallback.h:
	* src/ForeignCallback.cpp: additional data parameter for
	foreign_callback_add(); also the order of parameters was changed
	* edelib/Nls.h: some macro code formatting

2009-11-12  Sanel <karijes@users.sourceforge.net>

	* edelib/IconLoader.h:
	* src/IconLoader.cpp:
	* src/xdgmime/xdgmimemagic.c:
	* src/icons/unknown-*.xpm
	* src/Run.cpp:
	* src/MenuItem.cpp: fixed warnings found on gcc 4.3.2 and error with
	PATH_MAX and signal() on OpenSolaris
	* src/MenuButton.cpp: make it compiles on FLTK 1.1.7

2009-11-10  Sanel <karijes@users.sourceforge.net>