@@ -1,10 +1,24 @@
 #!/bin/sh
-# Convert .scm file to C string. Use as: 'cat file.scm | ./gen-c-string.sh' and revise scm_content variable.
-echo '/* Generated with gen-c-string.sh. Do not edit this file, edit .scm file */'
-echo 'static const char scm_content[] ='
-sed -e '/^\s*$/d' \
-	-e '/^\s*;/d' \
-	-e 's/"/\\"/g' \
-	-e 's/\(.*\)/    " \1 "/' \
-	-e 's///g'
+# Convert .scm file to C string for easier embedding.
+
+program="gen-c-string.sh"
+
+if [ "x$1" = "x" ]; then
+	cat <<EOF
+Usage: $program [scheme-source]
+Generage C string from scheme source file. Output is written to stdout.
+EOF
+	exit 1
+fi
+
+# convert 'foo.scm' to 'foo_scm'
+filestr=`echo $1 | sed 's/\./_/g'`
+
+echo "/* Generated with $program. Do not edit this file, edit .scm file */"
+echo "static const char ${filestr}_content[] ="
+cat $1 | sed -e '/^\s*$/d' \
+			 -e '/^\s*;/d' \
+			 -e 's/"/\\"/g' \
+			 -e 's/\(.*\)/    " \1 "/' \
+			 -e 's///g'
 echo ';'
